--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -97,6 +97,13 @@
   transform: translateY(-50%);
   cursor: pointer;
 }
+.password-toggle-icon-forgot {
+  position: absolute;
+  right: 35px;
+  top: 55%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
 .sign-in {
   left: 0;
   width: 50%;
@@ -238,6 +245,18 @@
   transform: translateX(200%);
 }
 
+@media (max-width: 735px) {
+  .password-toggle-icon-forgot {
+    top: 59%;
+  }
+}
+
+@media (max-width: 640px) {
+  .password-toggle-icon-forgot {
+    top: 60%;
+  }
+}
+
 @media (max-width: 560px) {
   .toggle-container {
     display: none;
@@ -250,5 +269,14 @@
   }
   .link-signin-signup-forgot .link-signup {
     display: flex;
+  }
+  .password-toggle-icon-forgot {
+    top: 55%;
+  }
+}
+
+@media (max-width: 380px) {
+  .password-toggle-icon-forgot {
+    top: 59%;
   }
 }
