--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -1,10 +1,8 @@
-.shop__layout {
+.shop__container {
   max-width: 100%;
-  height: 100vh;
-  background-color: aqua;
   margin: 5rem 0 0 0;
   padding: 10px;
-}
-
-.allSpecies__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
