--- a/src/component/Loading/Loading.css
+++ b/src/component/Loading/Loading.css
@@ -1,3 +1,9 @@
+.loading__container {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
 .wheel-and-hamster {
   --dur: 1s;
   position: relative;
@@ -6,7 +12,7 @@
   font-size: 14px;
   position: absolute;
   top: 35%;
-  left: 37%;
+  left: 40%;
   transform: translateX(50%);
 }
 
@@ -356,16 +362,26 @@
   }
 }
 
+@media (max-width: 1060px) {
+  .wheel-and-hamster {
+    top: 15%;
+    left: 34%;
+    transform: translateX(50%);
+  }
+}
+
 @media (max-width: 860px) {
   .wheel-and-hamster {
-    left: 30%;
+    top: 35%;
+    left: 24%;
     transform: translateX(50%);
   }
 }
 
 @media (max-width: 600px) {
   .wheel-and-hamster {
-    left: 25%;
+    top: 35%;
+    left: 20%;
     transform: translateX(50%);
   }
 }
