--- a/src/app/layout.css
+++ b/src/app/layout.css
@@ -1,6 +1,6 @@
 body {
   padding: 0;
-  margin: 0;
+  margin: 5.5rem 0;
   box-sizing: border-box;
 }
 /* Thiết lập kiểu thanh cuộn cho phần nội dung */
