--- a/src/app/layout.css
+++ b/src/app/layout.css
@@ -2,6 +2,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  /* font-family: "Quicksand" sans-serif; */
 }
 /* Thiết lập kiểu thanh cuộn cho phần nội dung */
 html {
