--- a/src/component/ChatBox/ChatBox.css
+++ b/src/component/ChatBox/ChatBox.css
@@ -10,11 +10,11 @@
 
 .chatbot_mess {
   position: fixed;
-  bottom: 25px;
-  right: 20px;
+  bottom: 80px;
+  left: 30px;
   z-index: 1000;
   transition: transform 0.3s ease-in-out;
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   border-radius: 50%;
   cursor: pointer;
 }
