--- a/src/component/ChatBox/ChatBox.css
+++ b/src/component/ChatBox/ChatBox.css
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 20px;
   left: 20px;
-  z-index: 1000;
+  z-index: 100000000;
   overflow: hidden;
   transition: transform 0.3s ease-in-out;
   background-color: transparent;
